--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Design.NoActionBar">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity android:name=".Main2Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,15 @@
         </activity>
         <activity
             android:name=".Main3Activity"
-            android:label="@string/title_activity_main3"></activity>
+            android:label="@string/title_activity_main3" />
+        <activity android:name=".ActivityOne" />
+        <activity android:name=".ActivityTwo" />
+        <activity android:name=".ActivityThree" />
+        <activity android:name=".ActivityFour" />
+        <activity android:name=".ActivityFive" />
+        <activity android:name=".ActivitySix" />
+        <activity android:name=".ActivitySeven" />
+        <activity android:name=".ActivityEight"></activity>
     </application>
 
 </manifest>
