--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".Main2Activity">
+
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Main2Activity"/>
         <activity
             android:name=".Main3Activity"
             android:label="@string/title_activity_main3" />
@@ -39,7 +39,7 @@
         <activity android:name=".ActivitySeven" />
         <activity android:name=".ActivityEight" />
         <activity android:name=".Society_one" />
-        <activity android:name=".society_two" />
+        <activity android:name=".Society_two" />
         <activity android:name=".Society_two" />
         <activity android:name=".Society_three" />
         <activity android:name=".Society_four" />
